--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -23,7 +23,7 @@
     <string name="about_haze">Дымка</string>
     <string name="about_for_translators">Для переводчиков:</string>
     <string name="about_for_translators_text">Если Вы хотите перевести данное приложение на Ваш язык, перейдите в мой аккаунт github (по иконке выше)</string>
-    <string name="about_social">Ссылки:</string>
+    <string name="about_graphics">Графика:</string>
     <string name="action_bar_selected_format">Выбрано: %d</string>
     <string name="app_name">Погода BZ</string>
     <string name="applying_theme">Применение темы\u2026</string>
@@ -161,6 +161,8 @@
     <string name="settings_click_actions">Действия по нажатию</string>
     <string name="settings_check_updates_summary">Проверять наличие новой версии приложения при запуске</string>
     <string name="settings_check_updates_title">Проверять обновления</string>
+    <string name="settings_hide_bottom_bar_title">Скрывать нижнюю панель</string>
+    <string name="settings_hide_bottom_bar_summary">Скрывать панель с кнопками кликом по экрану</string>
     <string name="settings_colorize_weather_icons_title">Раскрашивать иконки</string>
     <string name="settings_colorize_weather_icons_summary">Окрашивать иконки погоды в цвет текста (например, для белых иконок)</string>
     <string name="settings_miui_support_summary">Включает поддержку встроенных виджетов MIUI</string>
@@ -174,6 +176,7 @@
     <string name="settings_notification_summary">Отображать прогноз погоды в области уведомлений</string>
     <string name="settings_notification_text_color_summary">Цвет текста и иконки уведомления</string>
     <string name="settings_notification_title">Уведомление о погоде</string>
+    <string name="settings_expanded_notification_title">Расширенное уведомление</string>
     <string name="settings_notification_type">Тип уведомления</string>
     <string name="settings_notification_statusbar_summary">Показывать уведомление в статусной строке</string>
     <string name="settings_notification_statusbar_title">Уведомление в статусбаре</string>
@@ -185,6 +188,8 @@
     <string name="settings_update_interval_title">Интервал обновления</string>
     <string name="settings_update_roaming_summary">Обновлять прогноз погоды в роуминге. Это может увеличить ваши расходы по оплате счетов сотовой связи</string>
     <string name="settings_update_roaming_title">Обновлять в роуминге</string>
+    <string name="settings_update_show_nonet_toast_summary">Показывать всплывающее сообщение \"Нет подключения\" при отсутствии подключения к сети</string>
+    <string name="settings_update_show_nonet_toast_title">Показывать \"Нет подключения\"</string>
     <string name="settings_update_wake_title">Пробуждать устройство</string>
     <string name="settings_update_wifi_only_summary">Обновлять прогноз погоды только при наличии подключения по сети Wi-Fi</string>
     <string name="settings_update_wifi_only_title">Обновлять только по Wi-Fi</string>
@@ -203,8 +208,13 @@
     <string name="settings_widgets_widget4x1_data_title">Дополнительные данные</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Снимите галочку для использования фона по умолчанию</string>
     <string name="settings_widgets_widget4x1_transparent_title">Прозрачный фон</string>
+    <string name="settings_widgets_widget4x1_ext">Виджет 4x1 ext</string>
+    <string name="settings_widgets_widget4x1_ext_3days_view">Прогноз на 3 дня</string>
+    <string name="settings_widgets_widget4x1_ext_3days_view_sum">Показывать прогноз на три дня вместо давления, ветра и влажности</string>
     <string name="settings_widgets_widget4x1_v5">Виджет 4x1 (v5)</string>
     <string name="settings_widgets_widget4x2">Виджет 4x2</string>
+    <string name="settings_widgets_widget_clock_font">Шрифт (часы и дата)</string>
+    <string name="settings_widgets_widget_clock_font_default">По умолчанию</string>
     <string name="settings_widgets_widget4x2_city_font_summary">По умолчанию 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">Город</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">По умолчанию 50sp</string>
