--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -1,24 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="abc_action_mode_done">Kész</string>
-    <string name="abc_action_bar_home_description">Ugrás a főoldalra</string>
-    <string name="abc_action_bar_up_description">Felfelé mozgatás</string>
-    <string name="abc_action_menu_overflow_description">További lehetőségek</string>
-    <string name="abc_searchview_description_search">Keresés</string>
-    <string name="abc_searchview_description_query">Keresési lekérdezés</string>
-    <string name="abc_searchview_description_clear">Lekérdezés törlése</string>
-    <string name="abc_searchview_description_submit">Lekérdezés küldése</string>
-    <string name="abc_searchview_description_voice">Hangalapú keresés</string>
-    <string name="abc_activitychooserview_choose_application">Válasszon ki egy alkalmazást</string>
-    <string name="abc_activity_chooser_view_see_all">Összes megtekintése</string>
-    <string name="abc_shareactionprovider_share_with_application">Megosztás a következővel: %s</string>
-    <string name="abc_shareactionprovider_share_with">Megosztás a következővel:</string>
     <string name="about_author">Szerző:</string>
     <string name="about_blizzard">Hóvihar</string>
     <string name="about_cloudy">Felhős</string>
     <string name="about_dust">Szmog</string>
     <string name="about_fog">Ködös</string>
     <string name="about_for_translators">Magyar fordítás:</string>
+    <string name="about_graphics">Grafika:</string>
     <string name="about_for_translators_text">Vagyula (vagyula1@gmail.com)</string>
     <string name="about_hailstone">Jégeső</string>
     <string name="about_haze">Köd</string>
@@ -33,7 +21,6 @@
     <string name="about_rainstorm">Felhőszakadás</string>
     <string name="about_sleet">Ónos eső</string>
     <string name="about_snow_showers">Hózáporok</string>
-    <string name="about_social">Kapcsolatfelvétel:</string>
     <string name="about_sunny">Napos</string>
     <string name="about_t_storms">Zivatarok</string>
     <string name="about_version">Verzió:</string>
@@ -44,6 +31,7 @@
     <string name="btn_apply_theme">Téma alkalmazása</string>
     <string name="btn_delete_location">Helyszín törlése</string>
     <string name="cancel">Mégsem</string>
+    <string name="changelog">Változások</string>
     <string name="clear_miui_data">MIUI időjárásadatok törlése</string>
     <string name="clear_miui_data_dialog">MIUI Időjárás törlése</string>
     <string name="clear_miui_data_dialog_ask">Törli a MIUI Időjárás Szolgáltató adatbázis adatát?</string>
@@ -56,12 +44,10 @@
     <string name="dialog_color_picker">Szín választó</string>
     <string name="donate">Adományozás</string>
     <string name="donations_button_close">Bezár</string>
-    <string name="donations_description">"Hasznosnak találja az alkalmazást?
-Támogassa a fejlsztést adomány küldésével!"</string>
-    <string name="donations_thanks_dialog">Köszönjük a támogatást!
-Nagyra értékeljük!</string>
-    <string name="donations_thanks_dialog_title">Köszönöm!</string>
+    <string name="donations_description">"Hasznosnak találja az alkalmazást?\nTámogassa a fejlsztést adomány küldésével!"</string>
     <string name="donations_paypal_description">Az adományozott összeget kiválaszthatja a gombra való kattintás után.</string>
+    <string name="donations_thanks_dialog">Köszönjük a támogatást!\nNagyra értékeljük!</string>
+    <string name="donations_thanks_dialog_title">Köszönöm!</string>
     <string name="end_time_title">Vége</string>
     <string name="fetching_location">Helymeghatározás…</string>
     <string name="forecast_chance_of_rain">Eső várható</string>
@@ -110,7 +96,6 @@ Nagyra értékeljük!</string>
     <string name="forecast_thunderstorms">Zivatarok</string>
     <string name="forecast_tornado">Tornádó</string>
     <string name="forecast_windy">Vihar</string>
-    <string name="changelog">Változások</string>
     <string name="just_now">Most</string>
     <string name="loading">Betöltés…</string>
     <string name="location_edit">Gépelje be a város nevét</string>
@@ -140,14 +125,12 @@ Nagyra értékeljük!</string>
     <string name="moon_waninggibbous">Fogyó hold</string>
     <string name="moon_waxingcrescent">Növekvő hold</string>
     <string name="moon_waxinggibbous">Növekvő hold</string>
-    <string name="network_error">Csatlakozás sikertelen.
-Ellenőrizze a hálózati beállításokat.</string>
+    <string name="network_error">Csatlakozás sikertelen.\nEllenőrizze a hálózati beállításokat.</string>
     <string name="network_in_quiet_hours">Akkukímélési mód bekapcsolva. Frissítések leállítva.</string>
     <string name="network_in_roaming">Adatbarangoláskor frissítések tiltásának beállítása.</string>
     <string name="network_wifi_only">Frissítések beállítása csak Wi-Fi-ről.</string>
     <string name="new_version">Új verzió</string>
-    <string name="no_provider">Helymeghatározás sikertelen 
-Válassza ki a helyszínt manuálisan</string>
+    <string name="no_provider">Helymeghatározás sikertelen \nVálassza ki a helyszínt manuálisan</string>
     <string name="no_weather_provider">Nincs elérhető MIUI időjárás szolgáltató</string>
     <string name="not_now">Most nem</string>
     <string name="press_color_to_apply">Alkalmazáshoz nyomja meg a színt</string>
@@ -158,6 +141,7 @@ Válassza ki a helyszínt manuálisan</string>
     <string name="quiet_hours_enabled_off">Ne frissítsen a megadott időszak alatt</string>
     <string name="quiet_hours_enabled_on">Akkukímélési mód engedélyezve</string>
     <string name="quiet_hours_title">Akkukímélési mód</string>
+    <string name="save_screen_shot_failed">A képernyőkép mentése nem sikerült</string>
     <string name="settings_about_title">Névjegy</string>
     <string name="settings_category_animation">Animáció beállítások</string>
     <string name="settings_category_animation_sum">Időjárás animáció beállítások és letöltés</string>
@@ -221,10 +205,17 @@ Válassza ki a helyszínt manuálisan</string>
     <string name="settings_widgets_clock_remove_leading_zero_title">Egyszámjegyű óra</string>
     <string name="settings_widgets_local_time_summary">Város helyi idejének használata</string>
     <string name="settings_widgets_local_time_title">Helyi idő</string>
+    <string name="settings_widgets_widget_clock_font">Betűtípus (óra és dátum)</string>
+    <string name="settings_widgets_widget_clock_font_default">Alapértelmezett</string>
     <string name="settings_widgets_widget4x1">Widget 4x1</string>
     <string name="settings_widgets_widget4x1_data_title">Időjárás adatok</string>
+    <string name="settings_widgets_widget4x1_ext">4x1 részl.</string>
+    <string name="settings_widgets_widget4x1_ext_3days_view">3 napos előrejelzés</string>
+    <string name="settings_widgets_widget4x1_ext_3days_view_sum">3 napos előrejelzés megjelenítése a légnyomás, szélsebesség és páratartalom helyett</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Átlátszó háttér alkalmazása</string>
     <string name="settings_widgets_widget4x1_transparent_title">Átlátszó háttér</string>
+    <string name="settings_widgets_widget4x1_v5">Widget 4x1 (v5)</string>
+    <string name="settings_widgets_widget4x2">Widget 4x2</string>
     <string name="settings_widgets_widget4x2_city_font_summary">Alapértelmezett érték 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">Város</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">Alapértelmezett érték 50sp</string>
@@ -239,16 +230,15 @@ Válassza ki a helyszínt manuálisan</string>
     <string name="settings_widgets_widget4x2_feel_font_title">Hőérzet</string>
     <string name="settings_widgets_widget4x2_temp_font_summary">Alapértelmezett érték 40sp</string>
     <string name="settings_widgets_widget4x2_temp_font_title">Hőmérséklet</string>
+    <string name="settings_widgets_widget4x2_v5">Widget 4x2 (v5)</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">Alapértelmezett érték 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Szélsebesség</string>
+    <string name="settings_widgets_widget4x3">Widget 4x3</string>
     <string name="settings_widgets_widget4x3_hourly_view">Óránkénti időjárás</string>
-    <string name="settings_widgets_widget_clock_font">Betűtípus (óra és dátum)</string>
-    <string name="settings_widgets_widget_clock_font_default">Alapértelmezett</string>
     <string name="share">Megosztás</string>
     <string name="share_content">\#WeatherBZ#</string>
     <string name="share_weather_content">"\#WeatherBZ# Ma %1$s időjárása : %2$s, %3$s, %4$s. Frissítve %5$s."</string>
     <string name="share_weather_title">Időjárás adatok megosztása</string>
-    <string name="save_screen_shot_failed">Képernyőkép mentése nem sikerült</string>
     <string name="start_time_title">Kezdete</string>
     <string name="temperature_units">Hőmérséklet mértékegysége</string>
     <string name="text_color_title">Szöveg szín</string>
