--- a/res/values-es-rES/strings.xml
+++ b/res/values-es-rES/strings.xml
@@ -44,20 +44,11 @@
     <string name="donate">Donar</string>
     <string name="donations_button_close">Cerrar</string>
     <string name="donations_description">"¿Encuentra útil esta aplicación?\n¡Ayude en su desarrollo mediante Flattr o envíe donaciones usando el Google Play Store!"</string>
-    <string name="donations_flattr">Flattr</string>
-    <string name="donations_flattr_description">¡Flattr se queda el 10% como cuota mensual!</string>
-    <string name="donations_google_android_market">Google Play Store</string>
-    <string name="donations_google_android_market_description">¡Google se queda el 30% de todas las donaciones!</string>
-    <string name="donations_google_android_market_donate_button">¡Donar!</string>
-    <string name="donations_google_android_market_not_supported">No se admiten donaciones In-App. ¿Está Google Play Store instalado correctamente?</string>
-    <string name="donations_google_android_market_not_supported_title">No se admiten donaciones In-App</string>
-    <string name="donations_google_android_market_text">¿Cuánto?</string>
+    <string name="donations_thanks_dialog">¡Gracias por donar!\n¡Te lo agradezco mucho!</string>
+    <string name="donations_thanks_dialog_title">¡Gracias!</string>
     <string name="donations_paypal">PayPal</string>
     <string name="donations_yandex">Yandex.Money</string>
     <string name="donations_paypal_description">¡Puedes elegir cuánto quieres donar después de pulsar el botón!</string>
-    <string name="donations_paypal_item_name">InApp Donation</string>
-    <string name="donations_thanks_dialog">¡Gracias por donar!\n¡Te lo agradezco mucho!</string>
-    <string name="donations_thanks_dialog_title">¡Gracias!</string>
     <string name="end_time_title">Fin</string>
     <string name="fetching_location">Obteniendo ubicación\u2026</string>
     <string name="forecast_chance_of_rain">Posibilidad de lluvia</string>
@@ -173,6 +164,8 @@
     <string name="settings_click_actions">Acciones al tocar</string>
     <string name="settings_check_updates_summary">Buscar actualizaciones al iniciar la aplicación</string>
     <string name="settings_check_updates_title">Buscar actualizaciones</string>
+    <string name="settings_hide_bottom_bar_title">Ocultar barra inferior</string>
+    <string name="settings_hide_bottom_bar_summary">Toque la pantalla para ocultar la barra inferior</string>
     <string name="settings_colorize_weather_icons_title">Color de los iconos</string>
     <string name="settings_colorize_weather_icons_summary">Establecer el color de los iconos (para iconos del clima blancos por ejemplo)</string>
     <string name="settings_miui_support_summary">Activar para dar soporte a los widgets nativos de MIUI Weather</string>
@@ -181,10 +174,15 @@
     <string name="settings_miui_v5_title">ROM MIUI v5</string>
     <string name="settings_moon_phases_title">Fases lunares</string>
     <string name="settings_notification_color_title">Color de la barra de estado</string>
+    <string name="settings_notification_hourly_view">Mostrar clima por horas</string>
+    <string name="settings_notification_hourly_view_summary">Mostrar clima por horas en la vista ampliada</string>
     <string name="settings_notification_summary">Muestra las condiciones actuales del tiempo en el área de notificación</string>
     <string name="settings_notification_text_color_summary">Texto y color iconos de las notificaciones</string>
     <string name="settings_notification_title">Mostrar notificación</string>
+    <string name="settings_expanded_notification_title">Notificaciones ampliadas</string>
     <string name="settings_notification_type">Tipo de notificación</string>
+    <string name="settings_notification_statusbar_summary">Mostrar notificación en la barra de estado</string>
+    <string name="settings_notification_statusbar_title">Notificación en barra de estador</string>
     <string name="settings_show_info_summary">Mostrar u ocultar elementos de la interfaz</string>
     <string name="settings_show_info_title">Mostrar información</string>
     <string name="settings_time_format_12h">Formato 12h</string>
@@ -193,6 +191,8 @@
     <string name="settings_update_interval_title">Intérvalo de actualización</string>
     <string name="settings_update_roaming_summary">Actualizar automáticamente el pronóstico del tiempo en itinerancia. Tenga en cuenta que usted puede tener un coste adicional en su factura de teléfono</string>
     <string name="settings_update_roaming_title">Actualización en itinerancia</string>
+    <string name="settings_update_show_nonet_toast_summary">Mostrar aviso en pantalla cuando no haya conexión a internet</string>
+    <string name="settings_update_show_nonet_toast_title">Mostrar aviso \"Sin red\"</string>
     <string name="settings_update_wake_title">Despertar dispositivo</string>
     <string name="settings_update_wifi_only_summary">Actualizar automáticamente el pronóstico del tiempo sólo cuando se disponga de conexión Wifi</string>
     <string name="settings_update_wifi_only_title">Actualizar mediante Wi-Fi</string>
@@ -211,8 +211,13 @@
     <string name="settings_widgets_widget4x1_data_title">Datos ampliados</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Se ocultará el fondo por defecto</string>
     <string name="settings_widgets_widget4x1_transparent_title">Fondo transparente</string>
+    <string name="settings_widgets_widget4x1_ext">Widget 4x1 Ext</string>
+    <string name="settings_widgets_widget4x1_ext_3days_view">Previsión de 3 días</string>
+    <string name="settings_widgets_widget4x1_ext_3days_view_sum">Se mostrará la prevision para los próximos 3 días en lugar de la presión, viento y humedad</string>
     <string name="settings_widgets_widget4x1_v5">Widget 4x1 (v5)</string>
     <string name="settings_widgets_widget4x2">Widget 4x2</string>
+    <string name="settings_widgets_widget_clock_font">Fuente (reloj y fecha)</string>
+    <string name="settings_widgets_widget_clock_font_default">Por defecto</string>
     <string name="settings_widgets_widget4x2_city_font_summary">Por defecto 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">Ciudad</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">Por defecto 50sp</string>
