--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -162,8 +162,10 @@
     <string name="settings_category_widgets_sum">桌面部件的外观和点击动作</string>
     <string name="settings_citydb_provider">城市数据提供商</string>
     <string name="settings_click_actions">点击动作</string>
-    <string name="settings_check_updates_summary">应用时启动检查更新</string>
+    <string name="settings_check_updates_summary">应用启动时检查更新</string>
     <string name="settings_check_updates_title">检查更新</string>
+    <string name="settings_hide_bottom_bar_title">隐藏底栏</string>
+    <string name="settings_hide_bottom_bar_summary">点击屏幕隐藏底栏</string>
     <string name="settings_colorize_weather_icons_title">彩色图标</string>
     <string name="settings_colorize_weather_icons_summary">设置图标颜色为文字颜色（除了白色图标）</string>
     <string name="settings_miui_support_summary">打开以支持MIUI原生桌面部件</string>
@@ -179,6 +181,7 @@
     <string name="settings_notification_summary">在通知区域中显示当前天气状况</string>
     <string name="settings_notification_text_color_summary">通知文字和图标颜色</string>
     <string name="settings_notification_title">显示通知</string>
+    <string name="settings_expanded_notification_title">扩展通知</string>
     <string name="settings_notification_type">图标类型</string>
     <string name="settings_show_info_summary">设置要显示的信息类型</string>
     <string name="settings_show_info_title">信息类型</string>
@@ -188,6 +191,8 @@
     <string name="settings_update_interval_title">更新间隔</string>
     <string name="settings_update_roaming_summary">即使在漫游时也自动更新天气预报。注意这将会产生额外的费用</string>
     <string name="settings_update_roaming_title">漫游时更新</string>
+    <string name="settings_update_show_nonet_toast_summary">无网络连接时显示提醒</string>
+    <string name="settings_update_show_nonet_toast_title">显示“无网络”提示</string>
     <string name="settings_update_wake_title">唤醒设备</string>
     <string name="settings_update_wifi_only_summary">只在连接到Wi-Fi时自动更新天气预报</string>
     <string name="settings_update_wifi_only_title">仅在Wi-Fi下更新</string>
@@ -206,8 +211,13 @@
     <string name="settings_widgets_widget4x1_data_title">扩展数据</string>
     <string name="settings_widgets_widget4x1_transparent_sum">未勾选时使用默认背景</string>
     <string name="settings_widgets_widget4x1_transparent_title">透明背景</string>
+    <string name="settings_widgets_widget4x1_ext">4x1扩展部件</string>
+    <string name="settings_widgets_widget4x1_ext_3days_view">3日预报</string>
+    <string name="settings_widgets_widget4x1_ext_3days_view_sum">显示3日内的预报取代气压、风和湿度信息</string>
     <string name="settings_widgets_widget4x1_v5">4x1部件（V5风格）</string>
     <string name="settings_widgets_widget4x2">4x2部件</string>
+    <string name="settings_widgets_widget_clock_font">字体（日期和时间）</string>
+    <string name="settings_widgets_widget_clock_font_default">默认</string>
     <string name="settings_widgets_widget4x2_city_font_summary">默认值22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">城市</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">默认值50sp</string>
